--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@ Ignore tout à la racine, sauf .gitignore et "wp-content"
 *
 !.gitignore
 !wp-content
-!wp-content/*
+
 
 # Ignore le contenu de "wp-content" sauf "plugins", "themes" et "mu-plugins"
-
+!wp-content/plugins/*/*
+!wp-content/themes/*/*
+!wp-content/mu-plugins/*/*
