--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ Ignore tout à la racine, sauf .gitignore et "wp-content"
 
 
 # Ignore le contenu de "wp-content" sauf "plugins", "themes" et "mu-plugins"
-!wp-content/plugins/*/*
-!wp-content/themes/*/*
-!wp-content/mu-plugins/*/*
+!wp-content/plugins
+!wp-content/plugins/**
+!wp-content/themes
+!wp-content/themes/**
+!wp-content/mu-plugins
+!wp-content/mu-plugins/**
